fix: hide scrollbar on contact form

--- a/frontend/src/styles/HideScrollbar.module.css
+++ b/frontend/src/styles/HideScrollbar.module.css
@@ -1,8 +1,10 @@
-.nav {
+.nav,
+.div {
   -ms-overflow-style: none; /* Internet Explorer 10+ */
   scrollbar-width: none; /* Firefox */
 }
 
-.nav::-webkit-scrollbar {
+.nav::-webkit-scrollbar,
+.div::-webkit-scrollbar {
   display: none; /* Safari and Chrome */
 }
